# Geometric-Algorithms

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  common.h  delauney.h  geometric_algorithms.cpp  line_sweep.h
input/: input_triangulation.txt  input_triangulation2.txt  input_triangulation3.txt  line_sweep_input_small.txt
